// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`\`PageContent\` component should render correctly with \`className\` prop 1`] = `
<div
  className="page__content __CLASSNAME__"
>
  __CONTENT__
</div>
`;

exports[`\`PageContent\` component should render correctly with default props 1`] = `
<div
  className="page__content"
>
  __CONTENT__
</div>
`;
